--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,14 @@ h1{
     padding-bottom: 15px;
     padding-top: 5;
     color:white;
+    font-family: 'Bree Serif', serif;
 }
 
 h2{
     font-size: 1.3rem; 
     padding-left: 45px;
     color:white;
+    font-family: 'Bree Serif', serif;
 }
 
 
@@ -116,6 +118,7 @@ header, nav {
   padding: 10px;
   font-size: 3rem;
   font-weight: 500;
+  font-family: 'Bree Serif', serif;
 }
 
 .content-img {
