--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
   font-size: 1rem;
   font-family: 'Rajdhani', Arial, sans-serif;
   font-weight: 400;
+  text-align: justify;
 }
 
 /*IMG----------------------------------------------------*/
